foto y menu actualizados

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -5,7 +5,7 @@ body {
 /* Hero Section */
 
 #Hero-Section {
-  background-image: url("../img/bg-hero.jpg");
+  background-image: url("https://media.istockphoto.com/id/1486921453/es/foto/feliz-hombre-cauc%C3%A1sico-de-40-a%C3%B1os-disfrutando-de-t%C3%A9-o-caf%C3%A9-en-el-balc%C3%B3n.jpg?s=612x612&w=is&k=20&c=0Lns-NQA60LCnftQzd0D4eAa6Z2o7DOlO-0IzdVQ_0g=");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
